--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
