--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "husky": "^9.1.7",
     "lucide-react": "^0.522.0",
     "motion": "^12.19.1",
     "next": "15.3.4",
     "prettier": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
